force-app/main/default/objects/OrderItem/fields/CA_PST_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>CA_PST_Tax_Amount__c</fullName>
    <label>CA PST Tax Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>