force-app/main/default/objects/OrderItem/fields/Changed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Changed_Quantity__c</fullName>
    <label>Changed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>