force-app/main/default/objects/OrderItem/fields/DailyRate_Swiss__c.field-meta.xml
<CustomField>
    <fullName>DailyRate_Swiss__c</fullName>
    <formula>IF(
  CONTAINS( Product_Name__c, &apos;STK&apos;), UnitPrice/(Quantity * 90),
  IF(CONTAINS( Product_Name__c, &apos;STT&apos;), UnitPrice/(Quantity * 90),
    IF(CONTAINS( Product_Name__c, &apos;STS&apos;), UnitPrice/(Quantity * 30), 0.00
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DailyRate_Swiss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>