force-app/main/default/objects/OrderItem/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>