force-app/main/default/objects/OrderItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Discount Amount from Price Book</description>
    <formula>If(PricebookEntry.Product2.Name = &apos;CASTARTERKITG6&apos;, PricebookEntry.Discount_Amount__c, 
If((PricebookEntry.Product2.Name = &apos;STT-GS-006&apos; &amp;&amp; IsBundleItem__c = true), PricebookEntry.Discount_Amount__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discount Amount from Price Book</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>