force-app/main/default/objects/OrderItem/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the combination of Order header id and product name.
05/4/18 - Changed the external id to be case sensitive</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>