force-app/main/default/objects/OrderItem/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>The date this Order Line Item was invoiced.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>