force-app/main/default/objects/OrderItem/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <formula>PricebookEntry.Product2.Integration_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Description</label>
    <type>Text</type>
</CustomField>