force-app/main/default/objects/OrderItem/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice Number for this line item.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>