force-app/main/default/objects/OrderItem/fields/Invoice_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Unit_Price__c</fullName>
    <description>This currency field will be used for Invoicing Purpose. We created this for Canada rollout, but can be extended for other countries if the need comes.</description>
    <label>Invoice Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>