force-app/main/default/objects/OrderItem/fields/Is_Return_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Return_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be stamped from Workflow when a return kit is selected. We need this to be applied on the Order rollup.</description>
    <label>Is Return Item?</label>
    <type>Checkbox</type>
</CustomField>