force-app/main/default/objects/OrderItem/fields/Is_Virtual_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Product__c</fullName>
    <description>This field points to the Product record to find if it is a virtual product or not</description>
    <formula>PricebookEntry.Product2.Is_Virtual_Product__c</formula>
    <label>Is Virtual Product?</label>
    <type>Checkbox</type>
</CustomField>