force-app/main/default/objects/OrderItem/fields/IsBundle__c.field-meta.xml
<CustomField>
    <fullName>IsBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle?</label>
    <type>Checkbox</type>
</CustomField>