force-app/main/default/objects/OrderItem/fields/IsBundleItem__c.field-meta.xml
<CustomField>
    <fullName>IsBundleItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item in Bundle?</label>
    <type>Checkbox</type>
</CustomField>