force-app/main/default/objects/OrderItem/fields/Italian_Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Italian_Invoice_Description__c</fullName>
    <formula>IF(CONTAINS( Product_Name__c, &apos;STK-&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;&apos;, 
IF(CONTAINS( Product_Name__c, &apos;STT-&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;Approvvigionamento per articolo: 90 giorni a 11.70CHF&apos;, 
IF(CONTAINS( Product_Name__c, &apos;STS-&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;Approvvigionamento per articolo: 30 giorni a 9.07 CHF &apos;,
IF(CONTAINS( Product_Name__c, &apos;MTSTKG6RNT&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;Ricevitore, Approvvigionamento par articolo 90 giorni a 1.27 CHF&apos;,
IF(CONTAINS( Product_Name__c, &apos;MTSTSG6DESC2&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;La disdetta anticipata ad una differenza di prezzo&apos;,
IF(CONTAINS( Product_Name__c, &apos;MTSTTG6DESC2&apos;), PricebookEntry.Product2.Integration_Description__c + &apos; REPLACETEXT &apos; + &apos;La disdetta anticipata ad una differenza di prezzo&apos;,
PricebookEntry.Product2.Integration_Description__c 
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Italian Invoice Description</label>
    <type>Text</type>
</CustomField>