force-app/main/default/objects/OrderItem/fields/Item_VAT_TAX__c.field-meta.xml
<CustomField>
    <fullName>Item_VAT_TAX__c</fullName>
    <description>Calculated the VAT from Fusion if the Fusion service is available otherwise will calculate Tax from Salesforce logic.</description>
    <label>VAT/TAX</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>