force-app/main/default/objects/OrderItem/fields/Lot_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lot_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Expiration Date</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>