force-app/main/default/objects/OrderItem/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Number</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>