force-app/main/default/objects/OrderItem/fields/Medical_Advice_Feature__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Feature__c</fullName>
    <description>Jagan 01/09/2018 - Stores the Medical advice feature value from Opportunity line item</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Advice Feature</label>
    <length>2</length>
    <type>Text</type>
</CustomField>