force-app/main/default/objects/OrderItem/fields/Medical_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number__c</fullName>
    <formula>IF(UnitPrice &gt; 0 &amp;&amp; (BEGINS (PricebookEntry.Product2.Name, &apos;STT&apos;) || PricebookEntry.Product2.Name = &apos;G6-SEN-XMER-LUMPSUM2&apos;) &amp;&amp; NOT(ISBLANK(Order.Opportunity.Xmer_Medical_Advice_Number_Exception__c)),
(MID( TEXT(Order.Opportunity.Xmer_Medical_Advice_Number_Exception__c) , 1, 2) &amp; &apos;.&apos; &amp; 
MID( TEXT(Order.Opportunity.Xmer_Medical_Advice_Number_Exception__c) , 3, 2) &amp; &apos;.&apos; &amp; 
MID( TEXT(Order.Opportunity.Xmer_Medical_Advice_Number_Exception__c) , 5, 2) &amp; &apos;.&apos; &amp; 
MID( TEXT(Order.Opportunity.Xmer_Medical_Advice_Number_Exception__c) , 7, 4)), 
PricebookEntry.Medical_Advice_Number__c)</formula>
    <label>Medical Advice Number</label>
    <type>Text</type>
</CustomField>