force-app/main/default/objects/OrderItem/fields/Order_Item_Added_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Added_by_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Item Added by Admin</label>
    <type>Checkbox</type>
</CustomField>