force-app/main/default/objects/OrderItem/fields/Parent_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Line_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order Line Id</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Parent_Order_LineItem</relationshipName>
    <type>Lookup</type>
</CustomField>