force-app/main/default/objects/OrderItem/fields/Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount__c</fullName>
    <formula>PricebookEntry.Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>