force-app/main/default/objects/OrderItem/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>PricebookEntry.Product2.Description</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>