force-app/main/default/objects/OrderItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>This field stores the Product name and is updated with workflow. It can be used in Rollup summary fields</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>