force-app/main/default/objects/OrderItem/fields/Regular_Price__c.field-meta.xml
<CustomField>
    <fullName>Regular_Price__c</fullName>
    <formula>PricebookEntry.UnitPrice +  PricebookEntry.Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>