force-app/main/default/objects/OrderItem/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer did not order the item</fullName>
            </value>
            <value>
                <fullName>Customer did not receive the item</fullName>
            </value>
            <value>
                <fullName>Customer no longer need the item</fullName>
            </value>
            <value>
                <fullName>Customer ordered the wrong item</fullName>
            </value>
            <value>
                <fullName>Delivery Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Discontinuation</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error Compilation</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error G4/G5/G6</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error mg/mmol</fullName>
            </value>
            <value>
                <fullName>Internal Processing Error Quantity</fullName>
            </value>
            <value>
                <fullName>Lack Regulation</fullName>
            </value>
            <value>
                <fullName>Other (Note Required)</fullName>
            </value>
            <value>
                <fullName>Price change</fullName>
            </value>
            <value>
                <fullName>QA Complaint</fullName>
            </value>
            <value>
                <fullName>Quantity change</fullName>
            </value>
            <value>
                <fullName>Reason code not provided</fullName>
            </value>
            <value>
                <fullName>Rejection After Approval</fullName>
            </value>
            <value>
                <fullName>Resignation Private</fullName>
            </value>
            <value>
                <fullName>Service Error Supplier</fullName>
            </value>
            <value>
                <fullName>The item does not work properly</fullName>
            </value>
            <value>
                <fullName>The item is damaged</fullName>
            </value>
            <value>
                <fullName>The item is missing parts</fullName>
            </value>
            <value>
                <fullName>The item was delivered late</fullName>
            </value>
            <value>
                <fullName>Wrong Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>