force-app/main/default/objects/OrderItem/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>