force-app/main/default/objects/OrderItem/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipment Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>