force-app/main/default/objects/OrderItem/fields/Shipped_Qty__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Qty__c</fullName>
    <label>Shipped Qty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>