force-app/main/default/objects/OrderItem/fields/Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider__c</fullName>
    <label>Shipping Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dhl</fullName>
                <label>DHL</label>
            </value>
            <value>
                <fullName>fedex</fullName>
                <label>FedEx</label>
            </value>
            <value>
                <fullName>purolator</fullName>
                <label>Purolator</label>
            </value>
            <value>
                <fullName>canadaPost</fullName>
                <label>Canada Post</label>
            </value>
            <value>
                <fullName>dpd</fullName>
                <label>DPD</label>
            </value>
            <value>
                <fullName>dpdLocal</fullName>
                <label>DPD Local</label>
            </value>
            <value>
                <fullName>any</fullName>
                <label>Any</label>
            </value>
            <value>
                <fullName>dhlExpress</fullName>
                <label>DHL Express</label>
            </value>
            <value>
                <fullName>dhlParcel</fullName>
                <label>DHL Parcel</label>
            </value>
            <value>
                <fullName>swissPost</fullName>
                <label>Swiss Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>