force-app/main/default/objects/OrderItem/fields/SkuBundle__c.field-meta.xml
<CustomField>
    <fullName>SkuBundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Bundle_Product</relationshipName>
    <type>Lookup</type>
</CustomField>