force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWAIT BILLING</fullName>
            </value>
            <value>
                <fullName>AWAIT RECEIVING</fullName>
            </value>
            <value>
                <fullName>AWAIT SHIP</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>CLOSED</label>
            </value>
            <value>
                <fullName>NOT STARTED</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>SHIPPED</fullName>
            </value>
            <value>
                <fullName>awaitingShipping</fullName>
                <label>AWAITING SHIPPING</label>
            </value>
            <value>
                <fullName>awaitingBilling</fullName>
                <label>AWAITING BILLING</label>
            </value>
            <value>
                <fullName>billed</fullName>
                <label>BILLED</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>CANCELLED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>