force-app/main/default/objects/OrderItem/fields/Tax_Source__c.field-meta.xml
<CustomField>
    <fullName>Tax_Source__c</fullName>
    <label>Tax Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ecom</fullName>
            </value>
            <value>
                <fullName>crm</fullName>
            </value>
            <value>
                <fullName>oms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>