force-app/main/default/objects/OrderItem/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Calculation for Qty times the unit price to get the total price of the product. This will be used for our rollup purpose. Out of box rollup field doesn&apos;t show up on the Order, so creating this one.</description>
    <formula>UnitPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>